assets/css/style.css
/*    BODY     */

.body {
    background-color:red;
}

.row {
    padding: 0;
    margin: 0;
}

.container-fluid {
    padding: 0;
    margin: -1px 0px -0px 0;
    background-color:red;
}

.col-xs-12 {
    padding:0;
    margin:0;
}
.nopadding {
    padding: 0;
    margin: 0;
}

.general-font {
    font-family: "Lobster", sans-serif;
    font-size: 1.75em;
}

.general-font li {
    text-align: center;
}

.btn {
    outline: none !important;
}

/*    NAVBAR    */

.logo {
    margin-left: 15px;
    padding: 0px;
    width: 125px;
    vertical-align: top;
    text-align: left;
}

.navbar {
    position: absolute;
    margin: 0px;
    top: 0;
    left: 0;
    width: 100%;
    z-index: 1;
    background-color: rgba(20, 20, 20, 0.7);
    border: none;
    border-color: transparent;
}

.navbar-inactive {
    background-color: transparent;
}

.navbar-active {
    background-color: rgba(100, 100, 100, 0.7);
}

.navbar-toggle {
    border: 0;
    background-color: transparent;
}

.navbar-default .navbar-collapse,
.navbar-default .navbar-form {
    border-color: transparent;
    padding-left: 0;
}

.navbar-default .navbar-toggle:focus,
.navbar-default .navbar-toggle:hover {
    background-color: transparent;
}

.navbar-default .navbar-toggle>i {
    color: rgba(120, 38, 38, 1);
    font-size: 2em;
}

.navbar-default .navbar-toggle:hover>i {
    color: rgba(115, 168, 52, 1);
}

.social-links li a {
    padding: 8px 5px 0px 5px;
}

.social-links li a i {
    height: 30px;
    width: 30px;
    padding: 8px 0;
    vertical-align: middle;
    text-align: center;
    border-radius: 20%;
    transition: 0.25s ease-in-out;
    background-color: #333333;
}

.social-links li a i:hover {
    transition: 0.25s ease-in-out;
    background-color: #f5f5f5;
}

/*    NAVBAR - Buttons - specific styling */

#navbar-home {
    color: rgba(120, 38, 38, 1);
    ;
}

#navbar-home:hover {
    color: #333333;
}

#navbar-home.hvr-rectangle-out:before {
    background-color: rgba(120, 38, 38, 1);
}

#navbar-band {
    color: rgba(244, 216, 78, 1);
}

#navbar-band:hover {
    color: #333333;
}

#navbar-band.hvr-rectangle-out:before {
    background-color: rgba(244, 216, 78, 1);
}

#navbar-music {
    color: rgba(115, 168, 52, 1);
}

#navbar-music:hover {
    color: #333333;
}

#navbar-music.hvr-rectangle-out:before {
    background-color: rgba(115, 168, 52, 1);
}

#navbar-booking {
    color: rgba(241, 108, 55, 1);
}

#navbar-booking:hover {
    color: #333333;
}

#navbar-booking.hvr-rectangle-out:before {
    background-color: rgba(241, 108, 55, 1);
}

#navbar-fans {
    color: rgba(69, 90, 186, 1);
}

#navbar-fans:hover {
    color: #333333;
}

#navbar-fans.hvr-rectangle-out:before {
    background-color: rgba(69, 90, 186, 1);
}

/*    MAIN     */

/*    TOP SECTION */

.top-section {
    height: 55vh;
    position: relative;
    background: url(../images/background-flowers-b-and-w.png) no-repeat center center fixed;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
    border-bottom-style: solid;
    border-width: 5px;
    border-color: #333333;
    margin-top: 1px;
}

.top-section-container {
    height: 55vh;
    display: flex;
    align-items: center;
    position: relative;
    justify-content: center;
}

.main-image-container {
    /* used in xs screen */
    height: 15vh;
}

.main-image {
    border: 5px solid;
    border-radius: 10%;
    height: 20vh;
    width: 20vh;
}

.main-textbox-container {
    background-color: #f5f5f5;
    border: solid 5px;
    overflow: hidden;
    border-radius: 10%;
    padding: 0;
    height: 40vh;
}

.main-textbox {
    /* used in xs screen */
    height: 27vh;
    overflow: auto;
}

#main-header {
    margin-top: 5px;
    padding-left: 20px;
    padding-top: 15px;
}

.scrollbar-container {
    overflow: auto;
    height: 100%;
}

.top-section-backdrop-xs {
    /* Index page on xs only */
    width: 100%;
    height: 60vh;
}

#main-info {
    /*    not index page: */
    ;
    font-family: "Roboto", sans-serif;
    font-size: 1.25em;
    padding-top: 0px;
    padding-left: 20px;
    padding-right: 20px;
    border-radius: 10%;
}

/*    TOP SECTION - BUTTONS    */

/*    band, music and booking  */

.top-section-navbutton {
    outline: none !important;
    background-color: transparent;
    padding: 0;
    border: none;
    transition: 0.25s ease-in-out;
    font-size: 5vw;
}

.top-section-navbutton i {
    padding: 5px;
    border: 5px solid;
    border-radius: 20%;
}

.top-section-navbutton :hover {
    outline: none;
    transition: 0.25s ease-in-out;
    background-color: #f5f5f5;
    color: #333333;
}

/*    TOP SECTION - BUTTONS    */

/*    Index  */

.button-flower-book {
    position: absolute;
    z-index: 1;
    width: 12%;
    bottom: 38%;
    left: 1%;
    transition: 0.5s ease-in-out;
}

.button-flower-book:hover {
    width: 15%;
    transition: 0.5s ease-in-out;
}

.button-flower-music {
    position: absolute;
    z-index: 1;
    width: 15%;
    bottom: 5%;
    left: 5%;
    transition: 0.5s ease-in-out;
}

.button-flower-music:hover {
    width: 20%;
    z-index: 2;
    transition: 0.5s ease-in-out;
}

/*    TOP SECTION - Video */

#video-background {
    /* Index page only */
    padding: 0;
    top: 0;
    margin-top: 0px;
    /* margin-bottom: 0px;*/
    margin: auto;
    border: 0;
    height: 55vh !important;

}

video {
    width: 100% !important;
    max-height: 55vh !important;
    padding: 0;
    margin: auto;
    border: 0;
    z-index: -1;
}

/*    MIDDLE SECTION */

.middle-section-container {
    min-height: 30vw;
    border-bottom-style: solid;
    border-width: 5px;
    border-color: #333333;
    text-align: center;
    padding-bottom: 30px;
}

.middle-section-container p {
    font-size: 4.25vw;
    color: #f5f5f5;
    padding-top: 15px;
    text-shadow: 0px 0px 15px #000000;
}

.middle-section-container img {
    transition: ease-in-out 0.25s;
}
/* ... */

